--- a/builtInTaskContribution.html
+++ b/builtInTaskContribution.html
@@ -13,14 +13,14 @@
         });
         
         VSS.ready(function() {
-            require(["enhancer/dump"], function () { });
         });      
     </script>
 </head>
 
 <body>
-    <div class="build-dump">
-         
+    <div class="task-contribution">
+         I depend on task D9BAFED4-0B18-4F58-968D-86655B4D2CE9 https://github.com/Microsoft/vsts-tasks/tree/master/Tasks/CmdLine through a constraint.
+         I show up only if you use CmdLine task as part of your build.
     </div>
 </body>
 </html>
