--- a/kiuwanStatusSection.html
+++ b/kiuwanStatusSection.html
@@ -18,8 +18,9 @@
 </head>
 
 <body>
-    <div class="build-status">
-        <img id="status-img" src="" width="300px" height="300px"></img>
+    <div class="kiuwan-status">
+        <p>For the moment here you have the build status with an image until we figure out how to get Kiuwan info...</p>
+        <img id="status-img" src="" width="30px" height="30px"></img>
     </div>  
 </body>
 </html>
