Kiuwan results integrated

--- a/kiuwanStatus.html
+++ b/kiuwanStatus.html
@@ -11,7 +11,7 @@
         });
         
         VSS.ready(function() {
-            require(["enhancer/status"], function () { });
+            require(["enhancer/kiuwanStatus"], function () { });
         });        
     </script>
 
