--- a/kiuwanTab.html
+++ b/kiuwanTab.html
@@ -11,7 +11,7 @@
         });
         
         VSS.ready(function() {
-            require(["enhancer/tab"], function () { });
+            require(["enhancer/kiuwanTab"], function () { });
         });   
     </script>
     
@@ -25,6 +25,7 @@
 <body>
     <div class="kiuwan-info">
         We are going to display lots of Kiuwan info here. Stay tuned...
+        <a id="kiuwan-link"></a>
     </div>
 </body>
 </html>
