--- a/kiuwanAuditTab.html
+++ b/kiuwanAuditTab.html
@@ -19,8 +19,9 @@
         });      
     </script>
     <style>
-        .kiuwan-info {
-            padding: 10px;
+        .kiuwan-audit {
+            padding-top: 10px;
+            padding-left: 20px;
         }
     </style>
 </head>
@@ -43,7 +44,7 @@
             </div>
             <div id="checkpoints-list" class="align-bottom">
             </div>
-            <div id="effort-summary" class="align-bottom">
+            <div id="effort-summary" class="align-bottom kiuwan-text">
             </div>
             <a target="_parent" id="kiuwan-link" class="kiuwan-link clear" href="">
                 See the audit results in Kiuwan
