--- a/kiuwanTab.html
+++ b/kiuwanTab.html
@@ -19,7 +19,8 @@
 
     <style>
         .kiuwan-info {
-            padding: 10px;
+            padding-top: 10px;
+            padding-left: 20px;
         }
     </style>
 </head>
@@ -117,15 +118,14 @@
                         <div id="qa-effort-num" class="qa-vh bold-num-w centered number-box"></div>
                     </div>
                 </div> <!-- effort to target -->
-                <div id="qa-dist" class="clear">
+                <div id="qa-dist" class="clear kiuwan-text">
                     Global indicator distribution: Efficiency <span id="efficiency-num" class="bold-num-blue"></span>
-                    Maintainabilty <span id="maintainabilty-num" class="bold-num-blue"></span>
-                    Portability <span id="portability-num" class="bold-num-blue"></span>
-                    Reliability <span id="reliability-num" class="bold-num-blue"></span>
-                    Security <span id="security-num" class="bold-num-blue"></span>
+                     | Maintainabilty <span id="maintainabilty-num" class="bold-num-blue"></span>
+                     | Portability <span id="portability-num" class="bold-num-blue"></span>
+                     | Reliability <span id="reliability-num" class="bold-num-blue"></span>
+                     | Security <span id="security-num" class="bold-num-blue"></span>
                 </div>
             </div> <!-- qa-summary -->
-            <br />
             <a target="_parent" rel="noopener noreferrer" id="kiuwan-link" class="kiuwan-link" href="">
                 See the details in Kiuwan
             </a>
