--- a/kiuwanSummary.html
+++ b/kiuwanSummary.html
@@ -21,12 +21,7 @@
 
 <body>
     <div class="kiuwan-summary">
-        <div id="baseline-disclaimer" class="hide">
-            There is no Kiuwan baseline info for this build
-        </div>
         <div id="kiuwan-summary-content" class="hide">
-            <br /><br />
-            <div id="sec-empty"></div>
             <div id="sec-summary">
                 <div id="sec-rating">
                     <div id="sec-rating-text" class="box-margin text-width box-alignment">
@@ -49,8 +44,6 @@
                     </div>
                 </div>
             </div> <!-- security-summary -->
-            <br /><br /><br />
-            <div id="qa-empty"></div>
             <div id="qa-summary">
                 <div id="qa-qa-indicator" class="clear">
                     <div id="qa-text" class="box-margin text-width box-alignment">
@@ -64,16 +57,9 @@
                     </div>
                 </div> <!-- quality indicator -->
             </div> <!-- qa-summary -->
-            <br />
-            <a id="kiuwan-link" class="kiuwan-link clear" href="">
-                See the details in Kiuwan
-            </a>
-        </div> <!-- kiuwan-summry -->
-        <div id="baseline-disclaimer" class="hide">
-            There is no Kiuwan audit info for this build
-        </div>
+        </div> <!-- kiuwan-summary-content -->
         <div id="kiuwan-audit-content" class="hide">
-            <h2>Kiuwan Audit Result</h2>
+            <div class="kiuwan-subtitle">Audit result</div>
             <div id="audit-result" class="box-alignment">
                 <img id="result-icon" class="box-alignment" />
                 <span id="result-text" class="audit-result-text"></span>
@@ -82,6 +68,10 @@
                 <span class="audit-score-text">SCORE:</span><span id="score-num" class="audit-score-num"></span>
             </div>
         </div>
+        <br />
+        <a id="kiuwan-link" class="kiuwan-link clear" href="">
+            See the details in Kiuwan
+        </a>
     </div>
 </body>
 
